fix alignment issues with about section, will need media queries for smaller screens:

--- a/src/components/ScrollContainer/About/About.css
+++ b/src/components/ScrollContainer/About/About.css
@@ -1,3 +1,18 @@
+.about-wrapper {
+    width: 85%;
+    max-width: 1200px;
+    display: flex;
+
+}
+.about-content-container {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 #about h3 {
     font-size: 2rem;
 }
@@ -15,7 +30,7 @@
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
-    width: 60%;
+    width: 100%;
     min-width: 400px;
 }
 
@@ -23,7 +38,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 30%;
+    width: 40%;
     align-items: center;
 }
 
